# AnnieM

./: .gitignore  AnnieM.code-workspace  CMakeLists.txt  CNAME  Kconfig  actinius_icarus_ns.overlay  index.html  prj.conf  startserver.bat  style.css  thingy91_nrf9160_ns.overlay
pcb/: AnnieM-cache.lib  AnnieM-rescue.kicad_sym  AnnieM-rescue.lib  AnnieM.kicad_pcb  AnnieM.kicad_pro  AnnieM.kicad_sch  AnnieM.pro  AnnieM.sch  ICARUS_IOT_BOARD_THaz.kicad_sym  sym-lib-table
src/: AnnieM.code-workspace  ArducamCamera.c  ArducamCamera.h  Platform.h  adc.c  adc.h  cameraThread.c  cameraThread.h  health.c  health.h  leds.c  leds.h  main.c  mqtt_connection.c  mqtt_connection.h  nrfHal.c  nrfHal.h  power.c  power.h  temperature.c  wind_sensor.c  wind_sensor.h
